Simplify build.gradle